# csv2trac

./: pyproject.toml  readme.md
src/csv2trac/: __init__.py  __main__.py  csv2trac.py
